--- a/foreignworker.html
+++ b/foreignworker.html
@@ -77,7 +77,6 @@
         .text {
             margin-top: -15px;
         }
-
     </style>
     <script>
         function change(x) {
@@ -89,7 +88,6 @@
             x.style.color = "#000000";
             x.style.opacity = 1;
         }
-
     </script>
     <!-- Header -->
     <div id="header">
@@ -114,26 +112,28 @@
     <!-- Main -->
     <div id="main">
         <div class="container">
-            <div class="row">
-                <header style="text-align:center;">
-                    <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">人權問題！外籍看護權力影響長照人力資源</p>
-                </header>
-
+            <div id="sidebar" class="2u">
+                <section>
+                    <header>
+                    </header>
+                    <ul class="style">
+                    </ul>
+                </section>
+            </div>
+            <div class=8u>
                 <div class="row">
+                    <header style="text-align:center;">
+                        <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">人權問題！外籍看護權力影響長照人力資源</p>
+                    </header>
+
+
                     <div>
-                        <img src="images/chart3.jpg" width="400px" height="300px" alt="" />
+                        <img src="images/chart3.jpg" alt="" />
                         <p style="text-align:center;">圖(一)</p>
                     </div>
-                    <div id="sideba" class="1u" style="padding-left: 0px;">
-                        <section>
-                            <header>
-                            </header>
-                            <ul class="style">
-                            </ul>
-                        </section>
-                    </div>
+
                     <div>
-                        <img src="images/chart4.jpg" width="400px" height="300px" alt="" />
+                        <img src="images/chart4.jpg" alt="" />
                         <p style="text-align:center;">圖(二)</p>
                     </div>
                 </div>
