--- a/economic.html
+++ b/economic.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>彰化Changhua</title>
+    <title>彰化老人站出來</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -100,10 +100,10 @@
                 <br><br><br><br><br><br><br><br>
                 <ul>
                     <li><a href="index.html"><span class="here">Homepage</span></a></li>
-                    <li><a href="economic.html"><span class="here">Economic</span></a></li>
-                    <li><a href="index.html#culture"><span class="here">Culture</span></a></li>
-                    <li><a href="index.html#welfare"><span class="here">Welfare</span></a></li>
-                    <li><a href="index.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#changhua"><span class="here">Changhua</span></a></li>
+                    <li><a href="index.htmlindex.html#situation"><span class="here">Situation</span></a></li>
+                    <li><a href="index.htmlindex.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.htmlindex.html#solution"><span class="here">Problem</span></a></li>
                 </ul>
             </nav>
         </div>
